css/theme.css
/* ... */
a.theme-anchor:hover {
  color: #e1852e;
}

a.theme-anchor-important { 
  background: transparent url('../images/button-bg.png') repeat-x !important;
  padding-left: 5px;
  padding-right: 5px;
  padding-top: 1px;
  padding-bottom: 1px;
  height: 14px;
  border: 1px solid #d1d3d4;
  font-size: 10px;
  color: #e1852e;
}

a.theme-anchor-important:hover {
  border: 1px solid #a5a4a4;
  color: #e1852e;
}

a.theme-anchor-unimportant {
  background: transparent url('../images/button-bg.png') repeat-x !important;
  padding-left: 5px;
  padding-right: 5px;
  padding-top: 1px;
  padding-bottom: 1px;
  height: 14px;
  border: 1px solid #d1d3d4;
  font-size: 10px;
  color: #e1852e;
}

a.theme-anchor-unimportant:hover {
  border: 1px solid #a5a4a4;
  color: #e1852e;
}

a.theme-anchor-unimportant, x:-moz-any-link, x:default {
  padding-bottom: 1px;
  height: 14px;  
  padding-right: 5px; 
}

.theme-anchor-important .ui-button  {
  border: blue 5px solid;
}
/* ------------------------------------------------------------------------- */
/* Buttons */
/* ------------------------------------------------------------------------- */

/* Common button class */

input.theme-form-important { 
  background: transparent url('../images/button-bg.png') repeat-x !important;
  padding-left: 5px;
  padding-right: 5px;
  height: 18px;
  border: 1px solid #d1d3d4;
  color: #e1852e;
  margin-top: 0px;
  clear: both;
  -moz-border-radius-topleft: 5px; -webkit-border-top-left-radius: 5px; border-top-left-radius: 5px;
  -moz-border-radius-topright: 5px; -webkit-border-top-right-radius: 5px; border-top-right-radius: 5px;
  -moz-border-radius-bottomleft: 5px; -webkit-border-bottom-left-radius: 5px; border-bottom-left-radius: 5px;
  -moz-border-radius-bottomright: 5px; -webkit-border-bottom-right-radius: 5px; border-bottom-right-radius: 5px;
}

input.theme-form-important, x:-moz-any-link, x:default {
  background: transparent url('../images/button-bg.png') repeat-x !important;
  padding-left: 5px;
  padding-right: 5px;
  line-height: 12px;
  border: 1px solid #d1d3d4;
  color: #e1852e;
  margin-top: 0px;
  padding-bottom: 1px;
  clear: both;
  -moz-border-radius-topleft: 5px; -webkit-border-top-left-radius: 5px; border-top-left-radius: 5px;
  -moz-border-radius-topright: 5px; -webkit-border-top-right-radius: 5px; border-top-right-radius: 5px;
  -moz-border-radius-bottomleft: 5px; -webkit-border-bottom-left-radius: 5px; border-bottom-left-radius: 5px;
  -moz-border-radius-bottomright: 5px; -webkit-border-bottom-right-radius: 5px; border-bottom-right-radius: 5px;
}

/* This style sheet is a mess.  The following style is for UI dialog boxes with buttons */
/* TODO: Marketplace cleanup */
.ui-dialog .ui-dialog-buttonpane button { 
  background: transparent url('../images/button-bg.png') repeat-x;
  padding-left: 5px;
  padding-right: 5px;
  height: 18px;
  border: 1px solid #d1d3d4;
  color: #e1852e;
  margin-top: 0px;
  clear: both;
}

input.theme-form-unimportant { 
  background: transparent url('../images/button-bg.png') repeat-x;
  padding-left: 5px;
  padding-right: 5px;
  height: 18px;
  border: 1px solid #d1d3d4;
  color: #e1852e;
  margin-top: 0px;
  clear: both;
  -moz-border-radius-topleft: 5px; -webkit-border-top-left-radius: 5px; border-top-left-radius: 5px;
  -moz-border-radius-topright: 5px; -webkit-border-top-right-radius: 5px; border-top-right-radius: 5px;
  -moz-border-radius-bottomleft: 5px; -webkit-border-bottom-left-radius: 5px; border-bottom-left-radius: 5px;
  -moz-border-radius-bottomright: 5px; -webkit-border-bottom-right-radius: 5px; border-bottom-right-radius: 5px;
}

.theme-button-set-last.theme-form-submit-custom.theme-form-unimportant   {
  padding-top: 1px;
}

.theme-button-set-last.theme-anchor-edit {
top: 0px;
}


input.theme-form-unimportant, x:-moz-any-link, x:default { 
  background: transparent url('../images/button-bg.png') repeat-x;
  padding-left: 5px;
  padding-right: 5px;
  line-height: 12px;
  border: 1px solid #d1d3d4;
  color: #e1852e;
  margin-top: 0px;
  padding-bottom: 1px;
  clear: both;
  -moz-border-radius-topleft: 5px; -webkit-border-top-left-radius: 5px; border-top-left-radius: 5px;
  -moz-border-radius-topright: 5px; -webkit-border-top-right-radius: 5px; border-top-right-radius: 5px;
  -moz-border-radius-bottomleft: 5px; -webkit-border-bottom-left-radius: 5px; border-bottom-left-radius: 5px;
  -moz-border-radius-bottomright: 5px; -webkit-border-bottom-right-radius: 5px; border-bottom-right-radius: 5px;
}

input.theme-form-important:hover {
  border: 1px solid #a5a4a4; color: #e1852e;
}

input.theme-form-unimportant:hover {
  border: 1px solid #a5a4a4; color: #e1852e;
}

/* Javascript anchor */
a.theme-anchor-javascript {padding-top: 1px; height: 14px; }

.theme-button-set .ui-buttonset span { display: none;}

/* ------------------------------------------------------------------------- */
/* Buttons Sets */
/* ------------------------------------------------------------------------- */

td div.theme-button-set {
  margin-left: 12px;
  margin-top: 3px;
}

.even td .theme-button-set {
  margin-bottom: 3px;
  margin-left:2px;
}

.odd td .theme-button-set {
  margin-bottom: 3px;
  margin-left:2px;
}

div.theme-button-set { background-image: url();  }

.theme-summary-table-action .theme-button-set {float: right; margin-top: 2px;}

a.theme-button-set-first, input.theme-button-set-first {
  border-top-left-radius: 5px;
  -moz-border-radius-topleft: 5px;  
  -webkit-border-top-left-radius: 5px;
  border-bottom-left-radius: 5px;
  -moz-border-radius-bottomleft: 5px;
  -webkit-border-bottom-left-radius: 5px;
  border-top-right-radius: 0px;
  -moz-border-radius-topright: 0px;  
  -webkit-border-top-right-radius: 0px;
  border-bottom-right-radius: 0px;
  -moz-border-radius-bottomright: 0px;
  -webkit-border-bottom-right-radius: 0px;
}
/* ... */

